iptables.conf
##############################################################################
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
##############################################################################
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:HCB-INPUT - [0:0]
-A INPUT -j HCB-INPUT
-A FORWARD -j HCB-INPUT
-A HCB-INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
# These are all closed for Quby/Toon:
-A HCB-INPUT -p tcp -m tcp --dport 8000 -j ACCEPT
-A HCB-INPUT -p tcp -m tcp --dport 22 --tcp-flags SYN,RST,ACK SYN -j ACCEPT
-A HCB-INPUT -p tcp -m tcp --dport 80 --tcp-flags SYN,RST,ACK SYN -j ACCEPT
-A HCB-INPUT -p udp -m udp --sport 67:68 --dport 67:68 -j ACCEPT
-A HCB-INPUT -p udp -m udp --dport 137:138 -j ACCEPT
-A HCB-INPUT -i lo -j ACCEPT
-A HCB-INPUT -i tap+ -j ACCEPT
-A HCB-INPUT -i tun+ -j ACCEPT
-A HCB-INPUT -p tcp -m tcp --tcp-flags SYN,RST,ACK SYN -j DROP
-A HCB-INPUT -p udp -m udp -j DROP
COMMIT
##############################################################################
